--- a/src/stylesheets/css/parallax.css
+++ b/src/stylesheets/css/parallax.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 html, body {
   overflow: hidden;
+  padding: 0px;
+  margin: 0px;
 }
 
 .background {
